--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "better-psalm-docker-vscode",
 	"displayName": "Better Psalm Docker VS Code",
 	"description": "Better Psalm Docker VS Code",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"author": "Richard Paul",
 	"license": "MIT",
 	"publisher": "plotbox",
@@ -38,6 +38,7 @@
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
+		"command-exists": "^1.2.9",
 		"vsce": "^1.81.1",
 		"vscode-languageclient": "^6.1.3"
 	},
